--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+スタッフたちの備忘録
+記憶力が低下している方がその日何をしたか明日何をするかだけを簡単に記録するためのサービス。
+自分のための作業記録を残すのに加えてその日の前日に誰がどういった作業をしたのかを報告書ページで見ることができる。
+書き込みには日付が付随しているのでいつ頃にどういった作業を行ったかのログとしても利用可能。メモ書きとしても利用できる。
 データベース詳細
 //ログイン承認用テーブル
 Create table logindata(
